# eternal-sonata-studio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  files_extractor.py  gitignore
include/: Aiscriptparser.h  Aiscriptviewer.h  Animviewport.h  Application.h  Atrac3writer.h  Bopparser.h  Bopviewer.h  CSFParser.h  CSFViewer.h  Camera.h  ChunkInspector.h  Containerparser.h  Cutscenescene.h  Cutscenescriptparser.h  Cutsceneviewport.h  EFileParser.h  EFileTextureViewer.h  Efiletextextractor.h  Ep3parser.h  FileDialog.h  FileSystemBrowser.h  Fntparser.h  Fntviewer.h  NSHPParser.h  Nbn2parser.h  Nmdlloader.h  Nmtnparser.h  Ntx2parser.h  Ntx3parser.h  P3TexParser.h  P3TexViewer.h  Shader.h  Tcxdecompressor.h  Texparser.h  TextureCache.h  Tutorialparser.h  Tutorialviewer.h  Viewport3D.h
libs/bcdec/: bcdec.h
src/: Aiscriptparser.cpp  Aiscriptviewer.cpp  Animviewport.cpp  Application.cpp  Atrac3writer.cpp  CSFParser.cpp  CSFViewer.cpp  Camera.cpp  ChunkInspector.cpp  Containerparser.cpp  Cutscenescene.cpp  Cutscenescriptparser.cpp  Cutsceneviewport.cpp  EFileParser.cpp  EFileTextureViewer.cpp  EfiletextExtractor.cpp  Ep3parser.cpp  FileDialog.cpp  FileSystemBrowser.cpp  Fntparser.cpp  Fntviewer.cpp  NSHPParser.cpp  Nbn2parser.cpp  Nmdlloader.cpp  Nmtnparser.cpp  Ntx2parser.cpp  Ntx3parser.cpp  P3TexParser.cpp  P3texviewer.cpp  Shader.cpp  Tcxdecompressor.cpp  Texparser.cpp  TextureCache.cpp  Tutorialparser.cpp  Tutorialviewer.cpp  Viewport3D.cpp  main.cpp
